0.8.0b3: Better snapshot tidy up.
  Improve debugging - add component or ID to debug entry.
  Allow actual user agent to be used by prefixing with a !
  Undo broken IMAP
  Fix doorbell motion
0.8.0b2: Better shutdown of threads.
  Allow ciphers to be set to SSL defaults.
  Try to parse all email parts looking for the authentication code.
  Open mailbox read only, stops the wrong emails getting marked as read.
  Better detection of backend.
0.8.0b1: Fix yahoo imap support.
  Fix creation of ArloSnapshot objects.

0.8.0a15: Fix media library day count.
0.8.0a14: Fix sse reconnect.
  Provide access to base station recordings.
0.8.0a13: Better loading of initial settings from new devices.
  Update devices from device refresh
  Allow old backend to be used.
  Quiet down traditional chimes.
  Fix up missing timezones.
0.8.0a12: Use new MQTT backend
0.8.0a11: Add random user agent support.
0.8.0a10: Don't request resources for Wirefree doorbells.
0.8.0a9: Support IMAP port.
         Don't request resources for Essential cameras.
0.8.0a8: Don't ping Pro 3 floodlight.
0.8.0a7: Don't ping Essential and Pro 4 cameras.
         Stop when asked to.
0.8.0a6: Fixed schedule handling.
         Handle events in the background thread.
0.8.0a5: Update token to map to email address
         Save last video details
         Don't signal unless information has really changed
0.8.0a4: Add GO camera support.
         Fixed header issue.
0.8.0a3: Save authentication token.
0.8.0a2: Support quoted printable in Arlo 2fa emails
         Fix connected capability for video door bell.
0.8.0a1: New version after split from hass-aarlo.

0.7.1b13: Merge to hass-aarlo b13
0.7.1b11: Merge to hass-aarlo b11
0.7.1b9: Add cloudscraper support.
0.7.1b7: Allow removal of unicode characters from entity ids
        Siren on wired doorbell.
        Better doorbell icon.
0.7.1b6: Add new event handling
        Allow custimisable disarmed mode
0.7.1b5: Don't rely on camera reporting back idle status