@@ -3,6 +3,7 @@
   Allow actual user agent to be used by prefixing with a !
   Undo broken IMAP
   Fix doorbell motion
+  Fix doorbell capabilities
 0.8.0b2: Better shutdown of threads.
   Allow ciphers to be set to SSL defaults.
   Try to parse all email parts looking for the authentication code.
